--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "turbo run dev",
         "lint": "turbo run lint",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "check-types": "turbo run check-types"
+        "check-types": "turbo run check-types",
+        "docker:web": "npx turbo prune web --docker --out-dir=out-web && cp apps/web/Dockerfile out-web/  && docker build -t intern-web --build-arg NEXT_PUBLIC_API_URL=http://localhost:4000 -f out-web/Dockerfile out-web/",
+        "docker:api": "npx turbo prune api --docker --out-dir=out-api && cp apps/api/Dockerfile out-api/  && docker build -t intern-api -f out-api/Dockerfile out-api/"
     },
     "devDependencies": {
         "prettier": "^3.7.4",
